--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,106 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+  margin: 20px;
+  padding: 0;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 22px;
+}
+
+h2 {
+  margin-top: 0;
+  font-size: 20px;
+}
+
+h3 {
+  margin-top: 0;
+  font-size: 18px;
+}
+
+h4 {
+  margin-top: 0;
+  font-size: 16px;
+}
+
+h5 {
+  margin-top: 0;
+  font-size: 14px;
+}
+
+h6 {
+  margin-top: 0;
+  font-size: 12px;
+}
+
+code {
+  font-size: 1.2em;
+}
+
+ul {
+  padding-left: 20px;
+}
+/* profile */
+
+
+.large {
+  border: 4px solid gold;
+}
+
+.card {
+  width: fit-content;
+  margin: 20px;
+  padding: 20px;
+  font-size: 20px;
   text-align: center;
+  border: 1px solid #aaa;
+  border-radius: 20px;
+  background: #fff;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.avatar { margin: 5px; border-radius: 50%; min-height: 70px; }
+.profile {
+  border: 1px solid #aaa;
+  border-radius: 6px;
+  margin-top: 20px;
+  padding: 10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+h1, h2 { margin: 5px; }
+h1 { margin-bottom: 10px; }
+ul { list-style-type: none; padding: 0px 10px; }
+li { 
+  margin-bottom: 10px; 
+  display: grid; 
+  grid-template-columns: auto 1fr;
+  gap: 20px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
+img { width: 100px; height: 100px; border-radius: 50%; }
 
-.App-link {
-  color: #61dafb;
+.Page > * {
+  float: left;
+  width: 50%;
+  padding: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 { margin-top: 10px; margin-bottom: 0; }
+h3 {
+  margin-top: 5px;
+  font-weight: normal;
+  font-size: 100%;
+}
+img { width: 120px; height: 120px; }
+button {
+  display: block;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+label { display: block; }
+input { margin-left: 5px; margin-bottom: 5px; }
+img { width: 200px; height: 200px; }
+ul {
+  padding-left: 20px;
 }
